Made changes in SubredditMapper to inject AuthService